--- a/plugins/bottomButtons/bottomButtons.jade
+++ b/plugins/bottomButtons/bottomButtons.jade
@@ -1,19 +1,30 @@
-#leftButtons(ng-if="bb.showButtons")
+#leftButtons(ng-if="vm.showButtons")
 	md-button.md-icon-button.actionButton(
-		ng-repeat="button in bb.leftButtons track by $index"
-		ng-click="button.click()"
-		aria-label="{{button.label}}"
+	ng-repeat="button in vm.leftButtons"
+	ng-click="button.click()"
+	aria-label="{{button.label}}"
 	)
-		md-tooltip(md-direction="top") {{button.label}}
+		//md-tooltip(md-direction="top") {{button.label}}
 		md-icon(md-font-icon="{{button.icon}}")
+
+	.viewingOptionButtons(layout="column", ng-if="vm.showViewingOptionButtons")
+		md-button.md-icon-button.actionButton(
+		ng-repeat="index in vm.otherViewingOptionsIndices"
+		ng-click="vm.viewingOptions[index].click(vm.viewingOptions[index].index)"
+		aria-label="{{vm.viewingOptions[index].label}}"
+		)
+			//md-tooltip(md-direction="top") {{vm.viewingOptions[index].label}}
+			md-icon(md-font-icon="{{vm.viewingOptions[index].icon}}")
+
 div
-	md-button.md-fab.md-primary(ng-click="bb.toggleElements()", aria-label="Show buttons")
+	md-button.md-fab.md-primary(ng-click="vm.toggleElements()", aria-label="Show buttons")
 		md-icon#showButtonIcon(md-font-icon="fa-navicon", class="fa")
-#rightButtons(ng-if="bb.showButtons")
+
+#rightButtons(ng-if="vm.showButtons")
 	md-button.md-icon-button.actionButton(
-		ng-repeat="button in bb.rightButtons track by $index"
-		ng-click="button.click()"
-		aria-label="{{button.label}}"
+	ng-repeat="button in vm.rightButtons"
+	ng-click="button.click()"
+	aria-label="{{button.label}}"
 	)
-		md-tooltip(md-direction="top") {{button.label}}
-		md-icon(md-font-icon="{{button.icon}}", class="fa")
+		//md-tooltip(md-direction="top") {{button.label}}
+		md-icon(md-font-icon="{{button.icon}}")
