--- a/public/plugins/issues/issues.css
+++ b/public/plugins/issues/issues.css
@@ -70,6 +70,7 @@ issue .issueHeader .issueTitle {
 }
 issue .issueHeader .issueTitle h3 {
   padding: 5px 0 0 0;
+  width: 250px;
 }
 issue .issueHeader .issueTitle .issueTitleInfo {
   position: relative;
