--- a/public/plugins/panel/panel.css
+++ b/public/plugins/panel/panel.css
@@ -65,11 +65,11 @@ panel-content {
 }
 
 panel-content md-content {
-  /*height: calc(100% - 48px);*/
   overflow-x: hidden;
+  overflow-y: auto;
   border-bottom-left-radius: 4px;
   border-bottom-right-radius: 4px;
-  height: 100%;
+  height: calc(100% - 48px);
 }
 
 panel-content .md-whiteframe-1dp {
@@ -109,7 +109,8 @@ panel-content .md-menu {
 }
 
 panel-content .panelContentContainer {
-  overflow: hidden;
+  overflow-x: hidden;
+  overflow-y: auto;
   width: 100%;
   height: 100%;
 }
