--- a/public/plugins/project/home.css
+++ b/public/plugins/project/home.css
@@ -17,3 +17,22 @@ home .logoutButton {
   right: 0;
   z-index: 1;
 }
+
+.cardInfo {
+  text-align: center;
+  padding: 15px;
+  background: #E8EAF6;
+  margin: 15px;
+  border-radius: 4px;
+}
+.cardInfo p {
+  margin: 0;
+  color: rgba(0, 0, 0, 0.7);
+  word-wrap: break-word;
+}
+.cardInfo md-icon {
+  margin: 0;
+  font-size: 16px;
+  width: 16px;
+  height: 16px;
+}
