--- a/public/plugins/panel/panel.css
+++ b/public/plugins/panel/panel.css
@@ -69,7 +69,7 @@ panel-content md-content {
   overflow-y: auto;
   border-bottom-left-radius: 4px;
   border-bottom-right-radius: 4px;
-  height: calc(100% - 48px);
+  height: 100%;
 }
 
 panel-content .md-whiteframe-1dp {
