ISSUE #109 - Remove of broken drag code

--- a/plugins/bottomButtons/compass.jade
+++ b/plugins/bottomButtons/compass.jade
@@ -1,6 +1,6 @@
-X3D#Axes(showStat="false", showLog="false", disableDoubleClick="true", mousedown="onMouseDown", mouseup="onMouseUp", viewpointchange="compassChange")
+X3D#Axes(showStat="false", showLog="false", disableDoubleClick="true", mousedown="onMouseDown", mouseup="onMouseUp")
 	Scene
-		Viewpoint(position="0 0 3.3525")
-			NavigationInfo("type"="TURNTABLE", explorationMode="rotate", typeParams='-0.4 60.0 0 3.14 0.00001')
+		Viewpoint(position="0 0 3.525")
+		NavigationInfo("type"="NONE")
 		Transform#AxesTrans
 			Inline("url"="public/compass.x3d", onload="compassLoaded(event);")
