--- a/plugins/bottomButtons/bottomButtons.jade
+++ b/plugins/bottomButtons/bottomButtons.jade
@@ -5,7 +5,7 @@
 	aria-label="{{button.label}}"
 	)
 		//md-tooltip(md-direction="top") {{button.label}}
-		md-icon(md-font-icon="{{button.icon}}")
+		md-icon(md-font-icon="{{button.icon}}", ng-class="button.iconClass")
 
 	.viewingOptionButtons(layout="column", ng-if="vm.showViewingOptionButtons")
 		md-button.md-icon-button.actionButton(
@@ -14,7 +14,7 @@
 		aria-label="{{vm.viewingOptions[index].label}}"
 		)
 			//md-tooltip(md-direction="top") {{vm.viewingOptions[index].label}}
-			md-icon(md-font-icon="{{vm.viewingOptions[index].icon}}")
+			md-icon(md-font-icon="{{vm.viewingOptions[index].icon}}", ng-class="vm.viewingOptions[index].iconClass")
 
 div
 	md-button.md-fab.md-primary(ng-click="vm.toggleElements()", aria-label="Show buttons")
@@ -27,4 +27,4 @@ div
 	aria-label="{{button.label}}"
 	)
 		//md-tooltip(md-direction="top") {{button.label}}
-		md-icon(md-font-icon="{{button.icon}}")
+		md-icon(md-font-icon="{{button.icon}}", ng-class="button.iconClass")
