--- a/public/plugins/project/home.css
+++ b/public/plugins/project/home.css
@@ -17,3 +17,7 @@ home .logoutButton {
   right: 0;
   z-index: 1;
 }
+home .logoutButton md-icon {
+  color: #FFFFFF;
+  text-shadow: 0 0 2px rgba(0,0,0,0.5);
+}
