--- a/plugins/bid/bid.jade
+++ b/plugins/bid/bid.jade
@@ -1,114 +1,109 @@
-.bidHeader.md-whiteframe-1dp(flex="100")
-	md-toolbar
-		.md-toolbar-tools
-			h2
-				span Bid 4 Free: {{vm.StateManager.state.project}} ({{vm.StateManager.state.account}})
-			span(flex)
-			h2 {{vm.Auth.username}}
-			md-button.md-icon-button(aria-label="Home", ng-click="vm.home($event)")
-				md-icon(class="fa fa-home")
+.bidInfo(layout="column", layout-padding, flex)
+	div(layout="row", layout-padding, flex)
+		bid-project-summary(flex)
+		bid-image(flex)
 
-.bidContent(layout="row" layout-align="space-between start")
-	.bidPackageList.md-whiteframe-1dp(flex=15)
-		md-toolbar
-			.md-toolbar-tools
-				h2 Packages
-				span(flex)
-				md-button.md-icon-button(aria-label="Add Package", ng-click="vm.setupAddPackage()", ng-if="vm.userIsAMainContractor")
-					md-icon(class="fa fa-plus")
-		.bidPackageListContent
-			md-content(layout-padding)
-				md-list()
-					md-list-item(ng-repeat="package in vm.packages", ng-click="vm.showPackage($index)")
-						p {{package.name}}
+	//.bidContent(layout="row", layout-align="space-between start")
+		.bidPackageList.md-whiteframe-1dp(flex=15)
+			md-toolbar
+				.md-toolbar-tools
+					h2 {{vm.listTitle}}
+					span(flex)
+					md-button.md-icon-button(aria-label="Add Package", ng-click="vm.setupAddPackage()", ng-if="vm.userIsAMainContractor")
+						md-icon(class="fa fa-plus")
+			.bidPackageListContent
+				md-content(layout-padding)
+					md-list()
+						md-list-item(ng-repeat="package in vm.packages", ng-click="vm.showPackage($index)", aria-label="Package")
+							p {{package.packageName}}
 
-	.bidSummary.md-whiteframe-1dp(flex=35)
-		md-toolbar
-			.md-toolbar-tools
-				h2 {{vm.summaryTitle}}
-		.bidSummaryContent
-			md-content(layout-padding)
-				div(ng-if="vm.packageSelected")
-					div(ng-if="vm.showInput")
-						md-input-container.md-block
-							label Name
-							input(required name="name" ng-model="vm.name")
-						md-input-container.md-block
-							label Site
-							input(required name="site" ng-model="vm.site")
-						md-input-container.md-block
-							label Budget
-							input(required type="number" step="any" name="budget" ng-model="vm.budget")
-						.bidSummaryContentDatePicker
-							h5 Completed by
-							md-datepicker(ng-model="vm.completedBy", md-placeholder="Enter date")
-						md-divider
-						div(layout="row", layout-align="center center")
-							md-button.md-accent(ng-click="vm.save()", ng-disabled="vm.saveDisabled") Save
-					.cardInfo(ng-if="vm.showInfo")
-							p {{vm.info}}
-
-					div(ng-if="vm.showSummary")
-						md-list
-							md-list-item
-								p(flex="30") Name
-								p(flex) {{vm.selectedPackage.name}}
-							md-list-item
-								p(flex="30") Site
-								p(flex) {{vm.selectedPackage.site}}
-							md-list-item
-								p(flex="30") Budget
-								p(flex) {{vm.selectedPackage.budget}}
-							md-list-item
-								p(flex="30") Completed by
-								p(flex) {{vm.selectedPackage.completedByPretty}}
-
-				div(ng-if="!vm.packageSelected")
-					.cardInfo
-						p {{vm.summaryInfo}}
-
-	.bidInvite.md-whiteframe-1dp(flex=35)
-		md-toolbar
-			.md-toolbar-tools
-				h2
-					span {{vm.inviteTitle}}
-		.bidInviteContent
-			md-content(layout-padding)
-				div(ng-if="vm.packageSelected")
-					div(ng-if="vm.userIsAMainContractor")
-						div(ng-if="!vm.showInput")
-							div(layout="row", layout-align="space-between start", ng-if="vm.packageNotAwarded")
-								md-input-container.md-block(flex="80")
-									label Sub Contractors
-									md-select(ng-model="vm.subContractorIndex")
-										md-option(ng-repeat="subContractor in vm.notInvitedSubContractors", value="{{$index}}")
-											| {{subContractor.user}}
-								md-button.md-accent(ng-click="vm.inviteSubContractor()", ng-disabled="vm.addSubContractorDisabled") Add
-							div
-								md-subheader.md-no-sticky Invited
-								md-list-item(ng-repeat="invited in vm.invitedSubContractors")
-									md-icon.bidInviteIcon(flex="5", ng-class="invited.invitedIcon")
-									p(flex="30") {{invited.user}}
-									span(flex="10")
-										md-button.md-accent(ng-if="invited.accepted && !vm.awarded", ng-click="vm.awardToSubContractor($index)") Award
+		.bidSummary.md-whiteframe-1dp(flex=35)
+			md-toolbar
+				.md-toolbar-tools
+					h2 {{vm.summaryTitle}}
+			.bidSummaryContent
+				md-content(layout-padding)
+					div(ng-if="vm.packageSelected")
 						div(ng-if="vm.showInput")
-							.cardInfo
-								p {{vm.statusInfo}}
+							md-input-container.md-block
+								label Name
+								input(required name="name" ng-model="vm.name")
+							md-input-container.md-block
+								label Site
+								input(required name="site" ng-model="vm.site")
+							md-input-container.md-block
+								label Budget
+								input(required type="number" step="any" name="budget" ng-model="vm.budget")
+							.bidSummaryContentDatePicker
+								h5 Completed by
+								md-datepicker(ng-model="vm.completedBy", md-placeholder="Enter date")
+							md-divider
+							div(layout="row", layout-align="center center")
+								md-button.md-accent(ng-click="vm.save()", ng-disabled="vm.saveDisabled") Save
+						.cardInfo(ng-if="vm.showInfo")
+								p {{vm.info}}
 
-					div(ng-if="!vm.userIsAMainContractor")
-						div(ng-if="!vm.awarded")
-							span(ng-if="!vm.responded")
-								md-button.md-accent(ng-click="vm.acceptInvite(true)") Accept
-								md-button.md-accent(ng-click="vm.acceptInvite(false)") Decline
-							span(ng-if="vm.responded")
+						div(ng-if="vm.showSummary")
+							md-list
+								md-list-item
+									p(flex="30") Name
+									p(flex) {{vm.selectedPackage.packageName}}
+								md-list-item
+									p(flex="30") Site
+									p(flex) {{vm.selectedPackage.site}}
+								md-list-item
+									p(flex="30") Budget
+									p(flex) {{vm.selectedPackage.budget}}
+								md-list-item
+									p(flex="30") Completed by
+									p(flex) {{vm.selectedPackage.completedByPretty}}
+
+					div(ng-if="!vm.packageSelected")
+						.cardInfo
+							p {{vm.summaryInfo}}
+
+		.bidInvite.md-whiteframe-1dp(flex=35)
+			md-toolbar
+				.md-toolbar-tools
+					h2
+						span {{vm.inviteTitle}}
+			.bidInviteContent
+				md-content(layout-padding)
+					div(ng-if="vm.packageSelected")
+						div(ng-if="vm.userIsAMainContractor")
+							div(ng-if="!vm.showInput")
+								div(layout="row", layout-align="space-between start", ng-if="vm.packageNotAwarded")
+									md-input-container.md-block(flex="80")
+										label Sub Contractors
+										md-select(ng-model="vm.subContractorIndex")
+											md-option(ng-repeat="subContractor in vm.notInvitedSubContractors", value="{{$index}}")
+												| {{subContractor.user}}
+									md-button.md-accent(ng-click="vm.inviteSubContractor()", ng-disabled="vm.addSubContractorDisabled") Add
+								div
+									md-subheader.md-no-sticky Invited
+									md-list-item(ng-repeat="invited in vm.invitedSubContractors")
+										md-icon.bidInviteIcon(flex="5", ng-class="invited.invitedIcon")
+										p(flex="30") {{invited.user}}
+										span(flex="10")
+											md-button.md-accent(ng-if="invited.accepted && !vm.awarded", ng-click="vm.awardToSubContractor($index)") Award
+							div(ng-if="vm.showInput")
+								.cardInfo
+									p {{vm.statusInfo}}
+
+						div(ng-if="!vm.userIsAMainContractor")
+							div(ng-if="!vm.awarded")
+								span(ng-if="!vm.responded")
+									md-button.md-accent(ng-click="vm.acceptInvite(true)") Accept
+									md-button.md-accent(ng-click="vm.acceptInvite(false)") Decline
+								span(ng-if="vm.responded")
+									.cardInfo(layout="row", layout-align="center center")
+										p(flex) Accepted invitation for package {{vm.selectedPackage.name}}
+
+							div(ng-if="vm.awarded")
 								.cardInfo(layout="row", layout-align="center center")
-									p(flex) Accepted invitation for package {{vm.selectedPackage.name}}
+									md-icon(flex="5", ng-class="vm.awardIcon")
+									p(flex) {{vm.statusInfo}}
 
-						div(ng-if="vm.awarded")
-							.cardInfo(layout="row", layout-align="center center")
-								md-icon(flex="5", ng-class="vm.awardIcon")
-								p(flex) {{vm.statusInfo}}
-
-				div(ng-if="!vm.packageSelected")
-					.cardInfo
-						p {{vm.statusInfo}}
+					div(ng-if="!vm.packageSelected")
+						.cardInfo
+							p {{vm.statusInfo}}
