--- a/plugins/bid/bidProjectSummary.jade
+++ b/plugins/bid/bidProjectSummary.jade
@@ -1,4 +1,4 @@
-div(flex, layout="column")
+.md-whiteframe-1dp(flex)
 	md-toolbar
 		.md-toolbar-tools
 			h2
@@ -7,5 +7,4 @@ div(flex, layout="column")
 			h2 ({{vm.Auth.username}})
 			md-button.md-icon-button(aria-label="Home", ng-click="vm.home($event)")
 				md-icon(class="fa fa-home")
-
 	md-content
