--- a/plugins/account/projectsList.jade
+++ b/plugins/account/projectsList.jade
@@ -7,4 +7,4 @@
 					i.fa.fa-cube.menu-icon
 					span.commit-number
 						a(ng-href="{{'/' + account + '/' + project}}") {{project}}
-					md-button(ng-click="vm.b4f(account, project)") B4F
+					md-button.md-raised.md-primary(ng-click="vm.b4f(account, project)") B4F
