--- a/public/plugins/bid/bid.css
+++ b/public/plugins/bid/bid.css
@@ -13,10 +13,15 @@ bid {
   width: 100%;
   height: 100vh;
   padding-top: 20px;
+  background: #E8EAF6;
 }
 
-.bidInfo {
+bid .bidInfo {
   width: 100%;
+  height: 100%;
+}
+
+bid .bidInfo .bidInfoSubContractor {
   height: 100%;
 }
 
@@ -54,6 +59,17 @@ bid .md-whiteframe-1dp {
   -webkit-border-radius: 4px;
   -moz-border-radius: 4px;
   border-radius: 4px;
+  background: #FFFFFF;
+}
+
+bid .bidInfoCardContent {
+  overflow-y: auto;
+  overflow-x: hidden;
+}
+
+bid .bidInfoCardContent .bidInfoCardLabel {
+  color: rgba(0,0,0,0.5);
+  margin-left: 5px;
 }
 
 /** Packages **********************************************************************************************************/
