--- a/plugins/bid/bidSummary.jade
+++ b/plugins/bid/bidSummary.jade
@@ -1,7 +1,17 @@
-.md-whiteframe-1dp(flex)
+.md-whiteframe-1dp(layout="column", flex)
 	md-toolbar
 		.md-toolbar-tools
 			h2
-				span Summary
+				span Package Summary
 
-	md-content
+	md-content.bidInfoCardContent(layout="column", flex layout-padding)
+		md-input-container.md-block
+			label Packages
+			md-select(ng-model="vm.selectedPackageIndex")
+				md-option(ng-repeat="package in vm.packages", value="{{$index}}")
+					| {{package.name}}
+
+		md-list(ng-if="vm.selectedPackageIndex")
+			md-list-item(ng-repeat="item in vm.packageSorted")
+				p(flex="30") {{item.label}}
+				p(flex) {{item.value}}
