--- a/plugins/bid/bidImage.jade
+++ b/plugins/bid/bidImage.jade
@@ -3,10 +3,7 @@
 		.md-toolbar-tools
 			h2
 				span 3D
-			span(flex)
-			md-button.md-icon-button(aria-label="Viewer", ng-click="vm.showViewer()")
-				md-icon(class="fa fa-share")
 
-	md-content.bidInfoCardContent(layout="row", layout-align="center center", flex)
-		div(flex="60")
-			img.md-card-image.bidThumbnailImage(ng-src="{{vm.thumbnailPath}}", alt="Thumbnail")
+	md-content.bidInfoCardContent(flex, ng-click="vm.showViewer()")
+		//div(flex)
+		img.bidThumbnailImage(ng-src="{{vm.thumbnailPath}}", alt="Thumbnail", flex)
