--- a/plugins/bid/bidStatus.jade
+++ b/plugins/bid/bidStatus.jade
@@ -5,3 +5,7 @@
 				span Status
 
 	md-content
+		div(ng-if="vm.invited", flex, layout-padding)
+			h4 You have been invited to bid for this package. Please accept or decline the invitation after reading the documents.
+			md-button.md-accent.md-raised(ng-click="vm.accept(true)") Accept
+			md-button.md-accent.md-raised(ng-click="vm.accept(false)") Decline
