ISSUE #142 - Added workspace page, started using SASS

--- a/plugins/bid4free/bidStatus.jade
+++ b/plugins/bid4free/bidStatus.jade
@@ -7,5 +7,5 @@
 	md-content
 		div(ng-if="vm.invited", flex, layout-padding)
 			h4 You have been invited to bid for this package. Please accept or decline the invitation after reading the documents.
-			md-button.md-accent.md-raised(ng-click="vm.accept(true)") Accept
-			md-button.md-accent.md-raised(ng-click="vm.accept(false)") Decline
+			md-button.md-accent(ng-click="vm.accept(true)") Accept
+			md-button.md-accent(ng-click="vm.accept(false)") Decline
