--- a/public/plugins/bid4freeWorkspace/bid4freeWorkspace.sass
+++ b/public/plugins/bid4freeWorkspace/bid4freeWorkspace.sass
@@ -34,5 +34,11 @@ bid4free-workspace
   md-radio-button > *
     padding-right: 20px
 
-  .sectionInput > *, .itemInput > *
+  .sectionInput > md-input-container,
+  .sectionInput > md-radio-group,
+  .itemInput > label,
+  .itemInput > md-radio-group
     padding-right: 40px
+
+  md-icon
+    font-size: 25px !important
