--- a/plugins/bid4free/bidWorkspace.jade
+++ b/plugins/bid4free/bidWorkspace.jade
@@ -4,8 +4,7 @@
 			h2
 				span Workspace
 
-	//md-content.bidInfoCardContent(layout="column", flex layout-padding, ng-if="vm.showItems")
-	md-content.bidInfoCardContent(layout="column", flex layout-padding, ng-if="true")
+	md-content.bidInfoCardContent(layout="column", flex layout-padding, ng-if="vm.showItems")
 		md-list
 			md-list-item(ng-repeat="item in vm.items", ng-click="vm.showInput()")
 				p(flex) {{item}}
