--- a/public/plugins/bid4freeWorkspace/bid4freeWorkspace.sass
+++ b/public/plugins/bid4freeWorkspace/bid4freeWorkspace.sass
@@ -42,3 +42,11 @@ bid4free-workspace
 
   md-icon
     font-size: 25px !important
+
+  .sections
+    overflow-y: scroll
+
+  .items label
+    font-weight: normal
+    color: rgba(0, 0, 0, 0.5)
+    padding: 10px 0 10px 0
