--- a/plugins/bid4freeWorkspace/bid4freeWorkspace.jade
+++ b/plugins/bid4freeWorkspace/bid4freeWorkspace.jade
@@ -4,11 +4,14 @@
 			h2
 				span {{vm.title}}
 			span(flex)
-			md-button.md-accent(flex, ng-click="vm.init()", aria-label="Init")
+				md-button.md-icon-button(ng-click="vm.init()", aria-label="Init")
+			md-button.md-icon-button(ng-click="vm.goToMainPage()", aria-label="Go Back")
+				md-icon(class="fa fa-mail-reply")
 
 	md-content(flex, layout="row")
 		div(flex="50", layout="row", layout-align="start start")
-			md-tabs(md-dynamic-height, md-border-bottom, flex="90")
+			md-tabs(md-dynamic-height, md-border-bottom, flex="90", md-selected="vm.selectedTab")
+				// Terms & Conditions
 				md-tab(label="Terms & Conditions")
 					md-content.md-padding
 						// Add new section
@@ -16,9 +19,12 @@
 							md-input-container.md-block(flex="40")
 								label Section Title
 								input(ng-model="vm.sectionTitle", name="Section Title")
-							md-radio-group(ng-model="vm.sectionType")
-								md-radio-button(value="keyvalue") Key/Value
-								md-radio-button(value="table") Table
+							.sectionInputRadioGroup(layout="row", flex="40", layout-align="space-between center")
+								| Section type:
+								md-radio-group(ng-model="vm.sectionType")
+									md-radio-button(value="keyvalue") Name/Description
+									md-radio-button(value="table") Table
+							span(flex="5")
 							md-button.md-accent(ng-disabled="!vm.sectionTitle", ng-click="vm.addSection()") Add Section
 
 						// Show sections
@@ -38,8 +44,9 @@
 
 								// Add new item
 								div(layout="column", flex)
-									div(layout="row", layout-align="center")
-										md-button.md-accent(ng-click="vm.toggleItemInput($index)") New Item
+									div(layout="row", layout-align="start center")
+										md-button.md-icon-button.md-accent(ng-click="vm.toggleItemInput($index)", aria-label="Toggle Item Input")
+											md-icon(class="fa fa-plus")
 									div(ng-if="section.showInput", layout="row", flex, layout-align="start center")
 										md-input-container.md-block(flex="20")
 											label Name
@@ -47,15 +54,53 @@
 										md-input-container.md-block(flex="80")
 											label Description
 											input(ng-model="section.newItemDescription", name="Item Description")
-										md-button.md-accent(flex="10", ng-click="vm.addItem($index)") Add
+										div(flex="10")
+											md-button.md-accent(ng-click="vm.addItem($index)") Add
 
+				// Bill of Quantities
 				md-tab(label="Bill of Quantities")
-						md-content.md-padding
-					md-tab(label="Other")
-						md-content.md-padding
+					md-content.md-padding
+						//Total
+						.boqTotal(layout="row", flex)
+							h3(flex="10") Total
+							h3 {{vm.boqTotal}}
 
-			md-button.md-accent(flex, ng-click="vm.save()", aria-label="Save")
-				md-icon(class="fa fa-floppy-o")
+						// List of items
+						md-list.boqList
+							md-list-item.md-1-line.boqListTitles
+								p(flex="45") Type
+								p(flex="15", layout="row", layout-align="center center") Code
+								p(flex="15", layout="row", layout-align="center center") Quantity
+								p(flex="10", layout="row", layout-align="center center") Rate
+								p(flex="10", layout="row", layout-align="center center") Price
+							md-list-item.md-1-line(ng-repeat="item in vm.boq")
+								p(flex="45") {{item.type}}
+								p(flex="15", layout="row", layout-align="center center") {{item.code}}
+								p(flex="15", layout="row", layout-align="center center") {{item.quantity}}
+								div(flex="10", layout="row", layout-align="center center")
+									md-input-container.boqListInput
+										input(
+											ng-model="item.rate"
+											name="Rate"
+											aria-label="Rate"
+											ng-change="vm.boqRateChange($index)"
+											type="number"
+											max="999999"
+											min="0")
+								p(flex="10", layout="row", layout-align="center center") {{item.price}}
+
+				// Scope of Works
+				md-tab(label="Scope of Works")
+					md-content.md-padding
+				// Other
+				md-tab(label="Other")
+					md-content.md-padding
+
+
+			span.saveContainer(flex, layout="row", layout-align="end center")
+				label.md-accent.md-hue-2(ng-if="vm.showSaveConfirmation") Saved
+				md-button.md-icon-button.md-accent(ng-click="vm.save()", aria-label="Save")
+					md-icon(class="fa fa-floppy-o")
 
 		md-content(flex="50")
 			viewermanager
