--- a/public/plugins/bid4freeWorkspace/bid4freeWorkspace.css
+++ b/public/plugins/bid4freeWorkspace/bid4freeWorkspace.css
@@ -17,22 +17,48 @@ bid4free-workspace {
       border-bottom-left-radius: 4px;
       border-bottom-right-radius: 4px; }
   bid4free-workspace .bid4freeWorkspaceSection {
-    border: solid 1px rgba(0, 0, 0, 0.12);
-    margin-bottom: 20px; }
+    border-bottom: solid 1px rgba(0, 0, 0, 0.12); }
   bid4free-workspace md-radio-button {
     display: inline; }
   bid4free-workspace md-radio-button > * {
-    padding-right: 20px; }
+    padding-right: 10px; }
   bid4free-workspace .sectionInput > md-input-container,
   bid4free-workspace .sectionInput > md-radio-group,
   bid4free-workspace .itemInput > label,
   bid4free-workspace .itemInput > md-radio-group {
     padding-right: 40px; }
-  bid4free-workspace md-icon {
+  bid4free-workspace .sectionInput .sectionInputRadioGroup {
+    margin-top: -16px; }
+  bid4free-workspace .sectionInput .md-button {
+    margin-top: -8px; }
+  bid4free-workspace .saveContainer label {
+    margin-top: 5px;
+    color: #66BB6A; }
+  bid4free-workspace .saveContainer md-icon {
     font-size: 25px !important; }
   bid4free-workspace .sections {
-    overflow-y: scroll; }
+    overflow-y: auto;
+    overflow-x: hidden;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    height: 600px; }
   bid4free-workspace .items label {
     font-weight: normal;
     color: rgba(0, 0, 0, 0.5);
     padding: 10px 0 10px 0; }
+  bid4free-workspace .boqTotal {
+    padding: 0 10px 20px; }
+    bid4free-workspace .boqTotal h3 {
+      padding: 0;
+      margin: 0; }
+  bid4free-workspace .boqList {
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    padding: 0; }
+  bid4free-workspace .boqListTitles {
+    font-weight: bold;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.1); }
+  bid4free-workspace .boqListInput {
+    margin: -12px 0 0 0;
+    padding: 0;
+    height: 20px; }
+    bid4free-workspace .boqListInput input {
+      text-align: center; }
