--- a/public/css/ui.css
+++ b/public/css/ui.css
@@ -1,30 +1,30 @@
 /**
- *  Copyright (C) 2014 3D Repo Ltd
+ *	Copyright (C) 2014 3D Repo Ltd
  *
- *  This program is free software: you can redistribute it and/or modify
- *  it under the terms of the GNU Affero General Public License as
- *  published by the Free Software Foundation, either version 3 of the
- *  License, or (at your option) any later version.
+ *	This program is free software: you can redistribute it and/or modify
+ *	it under the terms of the GNU Affero General Public License as
+ *	published by the Free Software Foundation, either version 3 of the
+ *	License, or (at your option) any later version.
  *
- *  This program is distributed in the hope that it will be useful,
- *  but WITHOUT ANY WARRANTY; without even the implied warranty of
- *  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
- *  GNU Affero General Public License for more details.
+ *	This program is distributed in the hope that it will be useful,
+ *	but WITHOUT ANY WARRANTY; without even the implied warranty of
+ *	MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ *	GNU Affero General Public License for more details.
  *
- *  You should have received a copy of the GNU Affero General Public License
- *  along with this program.  If not, see <http://www.gnu.org/licenses/>.
+ *	You should have received a copy of the GNU Affero General Public License
+ *	along with this program.  If not, see <http://www.gnu.org/licenses/>.
  */
 
 
 @font-face {
-    font-family: '3drepo-font';
-    src: url('../fonts/3drepo.io.eot');
-    src: url('../fonts/3drepo.io.eot?#iefix'),
-    	 url('../fonts/3drepo.io.woff') format('woff'),
-         url('../fonts/3drepo.io.ttf') format('truetype'),
-         url('../fonts/3drepo.io.svg#3drepo.io') format('svg');
-    font-style: normal;
-    font-weight: normal;
+	font-family: '3drepo-font';
+	src: url('../fonts/3drepo.io.eot');
+	src: url('../fonts/3drepo.io.eot?#iefix'),
+		 url('../fonts/3drepo.io.woff') format('woff'),
+		 url('../fonts/3drepo.io.ttf') format('truetype'),
+		 url('../fonts/3drepo.io.svg#3drepo.io') format('svg');
+	font-style: normal;
+	font-weight: normal;
 }
 
 body {
@@ -33,15 +33,15 @@ body {
 	//height: 100%;
 	height:1000;
 	//overflow: hidden;
-    margin : 0;
-    margin-top: 60px;
-    padding : 0;
-  	-webkit-touch-callout: none;
-    -webkit-user-select: none;
-    -khtml-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
+	margin : 0;
+	margin-top: 60px;
+	padding : 0;
+	-webkit-touch-callout: none;
+	-webkit-user-select: none;
+	-khtml-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
 	overflow-y: hidden;
 }
 
@@ -52,7 +52,7 @@ background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgb(87
 background: -webkit-linear-gradient(top,  rgb(87,156,228) 0%,rgb(130,206,242) 41%,rgb(207,236,254) 50%,rgb(210,235,252) 50%,rgb(229,232,233) 50%,rgb(231,231,231) 50%,rgb(206,206,206) 58%,rgb(195,195,195) 100%); /* Chrome10+,Safari5.1+ */
 background: -o-linear-gradient(top,  rgb(87,156,228) 0%,rgb(130,206,242) 41%,rgb(207,236,254) 50%,rgb(210,235,252) 50%,rgb(229,232,233) 50%,rgb(231,231,231) 50%,rgb(206,206,206) 58%,rgb(195,195,195) 100%); /* Opera 11.10+ */
 background: -ms-linear-gradient(top,  rgb(87,156,228) 0%,rgb(130,206,242) 41%,rgb(207,236,254) 50%,rgb(210,235,252) 50%,rgb(229,232,233) 50%,rgb(231,231,231) 50%,rgb(206,206,206) 58%,rgb(195,195,195) 100%); /* IE10+ */
-background: linear-gradient(to bottom,  rgb(87,156,228) 0%,rgb(130,206,242) 41%,rgb(207,236,254) 50%,rgb(210,235,252) 50%,rgb(229,232,233) 50%,rgb(231,231,231) 50%,rgb(206,206,206) 58%,rgb(195,195,195) 100%); /* W3C */
+background: linear-gradient(to bottom,	rgb(87,156,228) 0%,rgb(130,206,242) 41%,rgb(207,236,254) 50%,rgb(210,235,252) 50%,rgb(229,232,233) 50%,rgb(231,231,231) 50%,rgb(206,206,206) 58%,rgb(195,195,195) 100%); /* W3C */
 filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#579ce4', endColorstr='#c3c3c3',GradientType=0 ); /* IE6-9 */
 
 }
@@ -80,12 +80,12 @@ dd
 
 
 h1#logo {
-    font-family: '3drepo-font', sans-serif;
-    position: absolute;
-    bottom: 0;
-    right: 0.3em;
-    z-index: 10;
-    font-size: 600%;
+	font-family: '3drepo-font', sans-serif;
+	position: absolute;
+	bottom: 0;
+	right: 0.3em;
+	z-index: 10;
+	font-size: 600%;
 }
 
 
@@ -98,95 +98,95 @@ h1#logo,
 .fancytree-selected span.fancytree-title,
 .metadata-title,
 span.fancytree-title{
-    color: white;
-    font-weight: 100;
-    text-shadow: 0 0 1px #666, 1px 1px 1px #666;
+	color: white;
+	font-weight: 100;
+	text-shadow: 0 0 1px #666, 1px 1px 1px #666;
 }
 
 #x3dom-state-viewer {
-    top: 50px;
-    background-color: transparent;
+	top: 50px;
+	background-color: transparent;
 }
 
 div#x3dom_logdiv.x3dom-logcontainer {
-    background-color: rgba(50, 50, 50, 0.9);
-    border : 0;
-    bottom : 0;
-    padding : 0;
-    position : absolute;
-    width : 100%;
+	background-color: rgba(50, 50, 50, 0.9);
+	border : 0;
+	bottom : 0;
+	padding : 0;
+	position : absolute;
+	width : 100%;
 }
 
 .navbar.transparent.navbar-inverse .navbar-inner {
-    background: rgba(0,0,0,0.4);
+	background: rgba(0,0,0,0.4);
 }
 
 
 .scrollable-menu {
-    height: auto;
-    max-height: 200px;
-    overflow-x: hidden;
+	height: auto;
+	max-height: 200px;
+	overflow-x: hidden;
 }
 
 .navbar-inverse.navbar-brand {
-    max-width: 63%;
+	max-width: 63%;
 }
 
 
 nav.navbar.transparent.navbar-inverse.navbar-fixed-top {
-    background-color: transparent !important;
-    border-color: transparent !important;
+	background-color: transparent !important;
+	border-color: transparent !important;
 }
 
 .nav>li>a:hover, .nav>li>a:focus {
-    background-color: rgba(255,255,255,0.25);
+	background-color: rgba(255,255,255,0.25);
 }
 
 
 .nav .open>a, .nav .open>a:hover, .nav .open>a:focus,
 .navbar-nav>li>.dropdown-menu {
-    background-color: rgba(0,0,0,0.5);
-    border: none;
+	background-color: rgba(0,0,0,0.5);
+	border: none;
 }
 
 .dropdown-menu>li>a:hover {
-    background-color: rgba(0,0,0,0.1);
+	background-color: rgba(0,0,0,0.1);
 }
 
 .dropdown-menu {
 	background-color: rgb(45,45,45);
-    border-radius: none !important;
+	border-radius: none !important;
 }
 
 .fill {
-    display:block;
-    position:absolute;
-    height:auto;
-    bottom:0;
-    top:0;
-    left:0;
-    right:0;
-    //margin-top:50px; /* Set margin to your navbar height */
+	display:block;
+	position:absolute;
+	height:auto;
+	bottom:0;
+	top:0;
+	left:0;
+	right:0;
+	//margin-top:50px; /* Set margin to your navbar height */
 }
 
 
 .measure-info {
-    position: absolute;
-    background-color: transparent;
-    margin-top: 10px;
-    margin-left: 10px;
+	position: absolute;
+	background-color: transparent;
+	margin-top: 10px;
+	margin-left: 10px;
 }
 
 
 .table tr {
-    background-color: white;
+	background-color: white;
 }
 .table tr:hover {
-    background-color: #fff6c1;
+	background-color: #fff6c1;
 }
 
 /******************************************************************************/
-/* Tree view stuff                                                            */
+/* Tree view stuff															  */
 /******************************************************************************/
 
 .treeview {
@@ -194,41 +194,41 @@ nav.navbar.transparent.navbar-inverse.navbar-fixed-top {
 }
 
 .treeview-header{
-    text-align: center;
-    height: 100px;
+	text-align: center;
+	height: 100px;
 }
 
 ul.fancytree-container {
-    background-color: transparent;
-    overflow: hidden;
-    font-size: 12pt;
-    border: none !important;
-    outline:none !important;
+	background-color: transparent;
+	overflow: hidden;
+	font-size: 12pt;
+	border: none !important;
+	outline:none !important;
 }
 
 span.fancytree-title:hover {
-    background-color: rgba(255,255,255,0.25);
-    border-color:  rgba(255,255,255,0.25);
+	background-color: rgba(255,255,255,0.25);
+	border-color:  rgba(255,255,255,0.25);
 }
 
 .treeview-body {
-    /* Firefox */
-    height: -moz-calc(100% - 120px);
-    /* WebKit */
-    height: -webkit-calc(100% - 120px);
-    /* Opera */
-    height: -o-calc(100% - 120px);
-    /* Standard */
-    height: calc(100% - 120px);
+	/* Firefox */
+	height: -moz-calc(100% - 120px);
+	/* WebKit */
+	height: -webkit-calc(100% - 120px);
+	/* Opera */
+	height: -o-calc(100% - 120px);
+	/* Standard */
+	height: calc(100% - 120px);
 }
 
 #filter {
-    width: 100%;
-    margin: 0;
+	width: 100%;
+	margin: 0;
 }
 
 .waypoint-viewport {
-    position: absolute;
+	position: absolute;
 	top: 0px;
 	bottom: 0px;
 	left: 0px;
@@ -236,61 +236,61 @@ span.fancytree-title:hover {
 }
 
 .treerow{
-    margin-left: 10px;
-    text-align: left !important;
+	margin-left: 10px;
+	text-align: left !important;
 }
 
 .itemlabel{
-    text-align: left !important;
-    float: left;
-    width: 400px !important;
-    margin-left: 10px;
+	text-align: left !important;
+	float: left;
+	width: 400px !important;
+	margin-left: 10px;
 }
 
 .itempricegroup{
-    float: right;
-    text-align: right !important;
-    height: 20px;
-    margin: 0px !important;
+	float: right;
+	text-align: right !important;
+	height: 20px;
+	margin: 0px !important;
 }
 
 .itemprice{
-    float: right;
-    text-align: right !important;
-    min-width: 20px;
-    height: 20px !important;
-    position: relative;
+	float: right;
+	text-align: right !important;
+	min-width: 20px;
+	height: 20px !important;
+	position: relative;
 }
 
 .priceinput{
-    border: 1px solid #ccc;
-    text-align: right;
-    background: transparent;
-    height: 20px !important;
-    padding: 0px !important;
+	border: 1px solid #ccc;
+	text-align: right;
+	background: transparent;
+	height: 20px !important;
+	padding: 0px !important;
 }
 
 .icon{
-    margin-right: 10px;
+	margin-right: 10px;
 }
 
 .linkicon{
-    float: right;
-    width: 10px;
-    min-width: 10px;
-    margin-left: 5px;
-    position: relative;
-    top: 2px;
+	float: right;
+	width: 10px;
+	min-width: 10px;
+	margin-left: 5px;
+	position: relative;
+	top: 2px;
 }
 
 .linkicon-disabled{
-    float: right;
-    width: 10px;
-    min-width: 10px;
-    margin-left: 5px;
-    position: relative;
-    top: 2px;
-    opacity: 0.25;
+	float: right;
+	width: 10px;
+	min-width: 10px;
+	margin-left: 5px;
+	position: relative;
+	top: 2px;
+	opacity: 0.25;
 }
 
 #popup{
@@ -298,7 +298,7 @@ span.fancytree-title:hover {
 }
 
 .ui-widget-content{
-    background: rgba(0,0,0,0.5);
+	background: rgba(0,0,0,0.5);
 	visibility: hidden;
 	z-index: 2500;
 	top: 50px;
@@ -377,7 +377,7 @@ span.fancytree-title:hover {
 }
 
 floating {
-    font-family: sans-serif;
+	font-family: sans-serif;
 	color: red;
 	font-weight: 100;
 	text-align: center;
@@ -386,19 +386,19 @@ floating {
 	pointer-events: none;
 	border:   none;
 	z-index:   15000;
-	left:     0px;
-	top:      0px;
+	left:	  0px;
+	top:	  0px;
 }
 
 .line {
 	background: black;
-	width:      1px;
-	position:   absolute;
-	height:     1px;
+	width:		1px;
+	position:	absolute;
+	height:		1px;
 }
 
 a:hover {
-    text-decoration: none;
+	text-decoration: none;
 }
 
 .nav, .pagination, .carousel, .panel-title a { cursor: pointer; }
@@ -771,7 +771,7 @@ p.project-owner {
 }
 
 .iframe-placeholder-screenshot-large {
-    z-index: -1;
+	z-index: -1;
 }
 
 .placeholder-screenshot{
@@ -1047,8 +1047,8 @@ hr.fancy-line {
 /* Loading */
 img.loading{
 	margin-left: auto;
-    margin-right: auto;
-    display: block;
+	margin-right: auto;
+	display: block;
 }
 
 .signin {
@@ -1437,45 +1437,45 @@ header button.btn {
 
 /* Helps position submenu */
 .dropdown-submenu {
-    position: relative;
+	position: relative;
 }
 /* Menus under the submenu should show up on the right of the parent */
 .dropdown-submenu > .dropdown-menu {
 	max-height: 600px;
 	min-width:100%;
 	overflow-y: scroll;
-    -webkit-border-radius:0 6px 6px 6px;
-       -moz-border-radius:0 6px 6px 6px;
-            border-radius:0 6px 6px 6px;
+	-webkit-border-radius:0 6px 6px 6px;
+	   -moz-border-radius:0 6px 6px 6px;
+			border-radius:0 6px 6px 6px;
 }
 /* Make submenu visible when hovering on link */
 .dropdown-submenu:hover>.dropdown-menu {
-    display:block;
+	display:block;
 }
 
 /* Add carot to submenu links */
 .dropdown-submenu>a:after {
-    display:block;
-    float:right;
-    
-    /*simple */
-    content: "►";
-    color: #cccccc;
-    
-    /* looks a little better */
-    content:" ";
-    width:0;
-    height:0;
-    border-color:transparent;
-    border-style:solid;
-    border-width:5px 0 5px 5px;
-    border-left-color:#cccccc;
-    margin-top:5px;
-    margin-right:-10px;
+	display:block;
+	float:right;
+	
+	/*simple */
+	content: "►";
+	color: #cccccc;
+	
+	/* looks a little better */
+	content:" ";
+	width:0;
+	height:0;
+	border-color:transparent;
+	border-style:solid;
+	border-width:5px 0 5px 5px;
+	border-left-color:#cccccc;
+	margin-top:5px;
+	margin-right:-10px;
 }
 /* Change carot color on hover */
 .dropdown-submenu:hover>a:after {
-    border-left-color:#ffffff;
+	border-left-color:#ffffff;
 }
 
 /*************************************************/
@@ -1558,16 +1558,16 @@ ul.fancytree-container li {
 }
 
 #viewerMessageBox {
-    margin: auto;
-    top: 50%;
+	margin: auto;
+	top: 50%;
 	left: 50%;
-    position: absolute;
-    text-align: center;
+	position: absolute;
+	text-align: center;
 	color: white;
-    background-color: RGBA(45,45,45,0.9);
-    padding: 10px;
-    max-width: 200px;
-    min-width: 100px;
+	background-color: RGBA(45,45,45,0.9);
+	padding: 10px;
+	max-width: 200px;
+	min-width: 100px;
 	z-index: 10000;
 }
 
@@ -1612,7 +1612,7 @@ ul.fancytree-container li {
 #Axes {
 	width: 100px;
 	height: 100px;
-  	left: 107px;
+	left: 107px;
 	bottom: -80px;
 	position: absolute;
 	border: none;
@@ -1649,7 +1649,7 @@ ul.fancytree-container li {
 
 .walkthroughButtons button {
   margin-left: 2px !important;
-    padding: 7px 6px 3px 6px;
+	padding: 7px 6px 3px 6px;
 }
 
 .walkthroughButtons button span {
@@ -1694,4 +1694,9 @@ ul.fancytree-container li {
   color: #000000;
   outline: none;
   margin-left: 6px;
+}
+
+#accountpage {
+	height: inherit;
+	overflow-y: scroll;
 }
