--- a/plugins/bid4freeWorkspace/bid4freeWorkspace.jade
+++ b/plugins/bid4freeWorkspace/bid4freeWorkspace.jade
@@ -43,7 +43,7 @@
 									label(flex) {{item.values[0]}}
 
 								// Add new item
-								div(layout="column", flex)
+								.addNewItem(layout="column", flex)
 									div(layout="row", layout-align="start center")
 										md-button.md-icon-button.md-accent(ng-click="vm.toggleItemInput($index)", aria-label="Toggle Item Input")
 											md-icon(class="fa fa-plus")
