--- a/public/plugins/bid4freeWorkspace/bid4freeWorkspace.sass
+++ b/public/plugins/bid4freeWorkspace/bid4freeWorkspace.sass
@@ -65,6 +65,9 @@ bid4free-workspace
     color: rgba(0, 0, 0, 0.5)
     padding: 10px 0 10px 0
 
+  .addNewItem
+    margin-bottom: 20px
+
   .boqTotal
     padding: 0 10px 20px
 
